@@ -298,15 +298,17 @@ public class HttpJdkSolrClient extends HttpSolrClientBase {
 
       InputStream is = streams.iterator().next().getStream();
       bodyPublisher = HttpRequest.BodyPublishers.ofInputStream(() -> is);
-    } else if (queryParams != null && urlParamNames != null) {
-      ModifiableSolrParams requestParams = queryParams;
-      queryParams = calculateQueryParams(urlParamNames, requestParams);
-      queryParams.add(calculateQueryParams(solrRequest.getQueryParams(), requestParams));
-      // note the toQueryString() method adds a leading question mark which needs to be removed here
-      bodyPublisher =
-          HttpRequest.BodyPublishers.ofString(requestParams.toQueryString().substring(1));
     } else {
-      bodyPublisher = HttpRequest.BodyPublishers.noBody();
+      // move any params specified in urlParamNames or solrRequest from queryParams into urlParams
+      ModifiableSolrParams urlParams = calculateQueryParams(urlParamNames, queryParams);
+      urlParams.add(calculateQueryParams(solrRequest.getQueryParams(), queryParams));
+
+      // put the remaining params in the request body
+      // note the toQueryString() method adds a leading question mark which needs to be removed here
+      bodyPublisher = HttpRequest.BodyPublishers.ofString(queryParams.toQueryString().substring(1));
+
+      // replace queryParams with the selected set
+      queryParams = urlParams;
     }
 
     decorateRequest(reqb, solrRequest);
